feat: changed hero

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
   <div>
     <button id="maleButton">Male Rankings</button>
     <button id="femaleButton">Female Rankings</button>
-    <button id="hideButton">Hide Rankings</button>
+    <button id="hideButton"><i class="fas fa-arrow-up"></i></button>
   </div>
   <div id="Rankings-content">
     <!-- Table for male rankings -->
