feat: added dropdown navbar, logo, comments on live

--- a/index.html
+++ b/index.html
@@ -17,18 +17,29 @@
   <!-- Header -->
   <header>
     <div class="container">
-      <h1>Tennis Tournament</h1>
-      <nav>
-        <ul>
-          <li><a href="#home">Home</a></li>
-          <li><a href="#tournaments">Tournaments</a></li>
-          <li><a href="#Tennis Peeks">Tennis Peeks</a></li>
-          <li><a href="#Rankings">Rankings</a></li>
-          <li><a href="#Sponsors">Sponsors</a></li>
-          <li><a href="./live.html">Watch Live Tennis</a> <span class="live-indicator"></span></li>
-        </ul>
-      </nav>
+        <img src="./sources/logo.png" alt="Website Logo">
+        <h1>Tennis Tournament</h1>
+       
+        <nav>
+            <ul>
+                <li><a href="index.html#home">Home</a></li>
+                <li><a href="./live.html">Watch Live Tennis</a><span class="live-indicator"></span></li>
+            </ul>
+        </nav>
+        <div class="dropdown">
+            <button class="dropbtn">&#9660;</button>
+            <div class="dropdown-content">
+                <ul>
+                    <li><a href="index.html#tournaments">Tournaments</a></li>
+                    <li><a href="index.html#Tennis Peeks">Tennis Peeks</a></li>
+                    <li><a href="index.html#Rankings">Rankings</a></li>
+                    <li><a href="#Sponsors">Sponsors</a></li>
+                </ul>
+            </div>
+        </div>
     </div>
+    
+   
   </header>
 
   <!-- Hero Section -->
