--- a/live.html
+++ b/live.html
@@ -17,6 +17,7 @@
   <!-- Header -->
   <header>
     <div class="container">
+        <img src="./sources/logo.png" alt="Website Logo">
       <h1>Tennis Tournament</h1>
       <nav>
         <ul>
@@ -28,6 +29,7 @@
         </ul>
       </nav>
     </div>
+
   </header>
 
   <!-- Hero Section -->
@@ -48,7 +50,7 @@
     <div class="video-container">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/Na0w3Mz46GA?si=nHV6EM3EBqJuyUVJ&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>    </div>
     <div id="comments" class="comments-container">
-        <iframe src="https://www.youtube.com/live_chat?v=Na0w3Mz46GA&embed_domain=127.0.0.1:5500/live.html" frameborder="0"></iframe>
+        <iframe src="https://www.youtube.com/live_chat?v=Na0w3Mz46GA&embed_domain=https://amynnbrah.github.io/TennisProject/live.html" frameborder="0"></iframe>
     </div>
 
 </section>
