--- a/live.html
+++ b/live.html
@@ -32,7 +32,7 @@
         </div>
         <h1>Tennis Tournament</h1>
         <a href="https://teskerti.tn/"><img src="./sources/teskerti.png" alt="Teskerti"></a> 
-        <input type="text" id="searchInput" placeholder="Search player">
+        <input type="text" id="searchInput" placeholder="Search Look up players, games, stats...etc">
 
         <nav>
             <ul>
@@ -59,14 +59,17 @@
     <h2>Watch Live Tennis</h2>
    
     <button id="toggle-comments">Show Comments</button>
-
-    <!-- Embedded YouTube live stream -->
+<div id="live">
+   
     <div class="video-container">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/Na0w3Mz46GA?si=nHV6EM3EBqJuyUVJ&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>    </div>
-    <div id="comments" class="comments-container">
+        
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/Na0w3Mz46GA?si=nHV6EM3EBqJuyUVJ&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>   
+     </div>
+    
+      <div id="comments" class="comments-container">
         <iframe src="https://www.youtube.com/live_chat?v=Na0w3Mz46GA&embed_domain=https://amynnbrah.github.io/TennisProject/live.html" frameborder="0"></iframe>
     </div>
-
+  </div>
 </section>
 
 <!-- / Sponsors Section -->
