--- a/players.html
+++ b/players.html
@@ -33,7 +33,7 @@
         </div>
         <h1>Tennis Tournament</h1>
         <a href="https://teskerti.tn/"><img src="./sources/teskerti.png" alt="Teskerti"></a> 
-        <input type="text" id="searchInput" placeholder="Search player">
+        <input type="text" id="searchInput" placeholder="Search Look up players, games, stats...etc">
 
         <nav>
             <ul>
