fixed style issues add live js and live css

--- a/index.html
+++ b/index.html
@@ -962,7 +962,7 @@
     <div class="container">
       <h2>Subscribe to Our Newsletter</h2>
       <form id="newsletter-form">
-        <input type="email" id="email" name="email" placeholder="Enter your email" required>
+        <input type="email" id="email" name="email" placeholder="Enter your email and never miss any tennis News" required>
         <button type="submit" class="btn">Subscribe</button>
       </form>
     </div>
