--- a/live.html
+++ b/live.html
@@ -10,6 +10,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="stylesheet" href="stylesButtons.css">
   <link rel="stylesheet" href="header.css">
+  <link rel="stylesheet" href="live.css">
+  <script src="live.js"></script>
   <script src="script.js"></script>
 
 </head>
@@ -55,23 +57,18 @@
     </div>
   </section>
  <!-- Live Section-->
-  <section id="live-tennis">
-    <h2>Watch Live Tennis</h2>
-   
-    <button id="toggle-comments">Show Comments</button>
-<div id="live">
-   
+ <section id="live-tennis">
+  <h2>Watch Live Tennis</h2>
+  <button id="toggle-comments">Show Comments</button>
+  <div id="live">
     <div class="video-container">
-        
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/Na0w3Mz46GA?si=nHV6EM3EBqJuyUVJ&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>   
-     </div>
-    
-      <div id="comments" class="comments-container">
-        <iframe src="https://www.youtube.com/live_chat?v=Na0w3Mz46GA&embed_domain=https://amynnbrah.github.io/TennisProject/live.html" frameborder="0"></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/Na0w3Mz46GA?si=nHV6EM3EBqJuyUVJ&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
+    <div id="comments" class="comments-container">
+      <p>Comments are not available here. <a href="https://www.youtube.com/live_chat?v=Na0w3Mz46GA" target="_blank">View on YouTube</a></p>
     </div>
   </div>
 </section>
-
 <!-- / Sponsors Section -->
 
   <section id="Sponsors" class="Sponsors">
