--- a/players.html
+++ b/players.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="stylesButtons.css">
   <link rel="stylesheet" href="header.css">
   <script src="players.js"></script>
+  <script src="script.js"></script>
 
 </head>
 
