--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <ul>
                 <li><a href="index.html#home">Home</a></li>
                 <li><a href="players.html">Players</a></li>
-                <li><a href="./live.html">Watch Live Tennis</a><span class="live-indicator"></span></li>
+                <li><a href="./live.html">Watch Tennis</a><span class="live-indicator"></span></li>
             </ul>
         </nav>
  
@@ -956,6 +956,21 @@
   </div>
 </div>
 
+  </section>
+  <section id="contact-us">
+    <h2>Contact Us</h2>
+    <div class="contact-item">
+      <i class="fas fa-phone"></i>
+      <a href="tel:+1234567890">+1 234 567 890</a>
+    </div>
+    <div class="contact-item">
+      <i class="fas fa-envelope"></i>
+      <a href="mailto:info@example.com">info@example.com</a>
+    </div>
+    <div class="contact-item">
+      <i class="fas fa-map-marker-alt"></i>
+      <address>123 Example Street, City, Country</address>
+    </div>
   </section>
   <!-- NewsLetter -->
   <section id="newsletter" class="newsletter">
