--- a/live.html
+++ b/live.html
@@ -40,7 +40,7 @@
             <ul>
                 <li><a href="index.html#home">Home</a></li>
                 <li><a href="players.html">Players</a></li>
-                <li><a href="./live.html">Watch Live Tennis</a><span class="live-indicator"></span></li>
+                <li><a href="./live.html">Watch Tennis</a><span class="live-indicator"></span></li>
             </ul>
         </nav>
  
