--- a/players.html
+++ b/players.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tenninis Tournament</title>
+  <title>Tennis Tournament</title>
   <link rel="icon" type="image/png" href="./sources/logo.png"> 
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="players.css">
@@ -13,6 +13,9 @@
   <link rel="stylesheet" href="header.css">
   <script src="players.js"></script>
   <script src="script.js"></script>
+  <script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
+
 
 </head>
 
@@ -33,9 +36,9 @@
             </div>
         </div>
         <h1>Tennis Tournament</h1>
-        <a href="https://teskerti.tn/"><img src="./sources/teskerti.png" alt="Teskerti"></a> 
+        <a href="https://teskerti.tn/"><img src="./sources/teskerti.png" id="teskra" alt="Teskerti"></a> 
         <input type="text" id="searchInput" placeholder="Search Look up players, games, stats...etc">
-
+        <div id="google_translate_element"></div>
         <nav>
             <ul>
                 <li><a href="index.html#home">Home</a></li>
