--- a/index.html
+++ b/index.html
@@ -1002,7 +1002,7 @@
   <!-- Footer -->
   <footer>
     <div class="container">
-      <p>&copy; Tennis Tournament Website Made By Badreddine</p>
+      <p>&copy; Tennis Tournament Website Made By Fucci</p>
     </div>
   </footer>
 </body>
