--- a/live.html
+++ b/live.html
@@ -114,7 +114,7 @@
   </section>
   <footer>
     <div class="container">
-      <p>&copy; Tennis Tournament Website Made By Badreddine</p>
+      <p>&copy; Tennis Tournament Website Made By Fucci</p>
     </div>
   </footer>
   </body>
